tests/fixtures/invalid/reversed_bool.py
# Cannot call reversed() with Bool
x = reversed(True)
